fixed the cropping of background image on About page.

--- a/static/css/about.css
+++ b/static/css/about.css
@@ -3,19 +3,36 @@
     margin: 0;
 }
 
+/* html {
+    background: url('/static/images/DSC00857.JPG') no-repeat center center fixed;
+    background-size: cover;
+    -moz-background-size: cover;
+    -webkit-background-size: cover;
+    -o-background-size: cover;
+    overflow: auto;
+    padding-top: 0;
+} */
+
 .hero-body {
     background-image: url('/static/images/DSC00857.JPG');
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
     height: 1000px;
-    overflow: hidden;
+    /* overflow: auto; */
     animation: transitionIn 1.0s;
+    padding-top: 2%;
+    /* margin-top: 2%; */
+    position: relative;
+}
+
+.bodycontain {
+    position: fixed;
 }
 
 .articles {
-    margin: 5rem 0;
-    margin-top: -300px;
+    /* margin: 5rem 0; */
+    margin-top: -40%;
 }
 
 .card-content {
