--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,3 +1,16 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
+/* #htmlaccess {
+    padding: 0;
+} */
+
+html.has-navbar-fixed-top {
+    padding: 0;
+}
+
 body {
     font-family: 'Roboto Slab', serif;
 }
