--- a/static/css/home.css
+++ b/static/css/home.css
@@ -19,8 +19,10 @@
 
 #fancy {
     font-size: 6rem;
-    margin-top: 2%;
-    display: inline-flex;
+    margin-top: 3%;
+    margin-bottom: 3%;
+    /* display: inline-flex; */
+    width: 100%;
 }
 
 #mainnav {
